gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-start.rs
#[start]
fn foo(_: isize, _: *const *const u8) -> isize { 0 }
// { dg-error ".E0658." "" { target *-*-* } .-1 }

